<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="main_title">My Nanodegree Apps!</string>
    <string name="project1Name">Popular Movies</string>
    <string name="project2Name">Stock Hawk</string>
    <string name="project3Name">Build it Bigger</string>
    <string name="project4Name">Make Your App Material</string>
    <string name="project5Name">Go Ubiquitous</string>
    <string name="project6Name">Capstone</string>
</resources>
